--- a/spark-cluster-compose.yaml
+++ b/spark-cluster-compose.yaml
@@ -30,12 +30,12 @@ services:
       hostname: main
       tty: true
       stdin_open: true
-      environment:
-         - SPARK_MODE=master
-         - SPARK_RPC_AUTHENTICATION_ENABLED=no
-         - SPARK_RPC_ENCRYPTION_ENABLED=no
-         - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-         - SPARK_SSL_ENABLED=no
+      # environment:
+      #    - SPARK_MODE=master
+      #    - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      #    - SPARK_RPC_ENCRYPTION_ENABLED=no
+      #    - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      #    - SPARK_SSL_ENABLED=no
       ports:
         - 8080:8080
         - 8081:8081
@@ -52,12 +52,12 @@ services:
       hostname: worker1
       tty: true
       stdin_open: true
-      environment:
-         - SPARK_MODE=worker
-         - SPARK_MASTER_URL=spark://spark-master:7077
-         - SPARK_WORKER_CORES=2
-         - SPARK_WORKER_MEMORY=4g
-         - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      # environment:
+      #    - SPARK_MODE=worker
+      #    - SPARK_MASTER_URL=spark://spark-master:7077
+      #    - SPARK_WORKER_CORES=2
+      #    - SPARK_WORKER_MEMORY=4g
+      #    - SPARK_RPC_AUTHENTICATION_ENABLED=no
       depends_on:
          - main
          - kafka
@@ -72,12 +72,12 @@ services:
    worker2:
       image: spark-cluster-worker
       hostname: worker2
-      environment:
-         - SPARK_MODE=worker
-         - SPARK_MASTER_URL=spark://spark-master:7077
-         - SPARK_WORKER_CORES=2
-         - SPARK_WORKER_MEMORY=4g
-         - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      # environment:
+      #    - SPARK_MODE=worker
+      #    - SPARK_MASTER_URL=spark://main:7077
+      #    - SPARK_WORKER_CORES=2
+      #    - SPARK_WORKER_MEMORY=4g
+      #    - SPARK_RPC_AUTHENTICATION_ENABLED=no
       tty: true
       stdin_open: true
       depends_on:
