--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -2,4 +2,10 @@ spark.network.timeout 300s
 spark.executor.heartbeatInterval 60s 
 spark.rpc.askTimeout 300s 
 spark.task.maxFailures 10 
-spark.locality.wait 5s 
+spark.locality.wait 0s 
+# spark.submit.deployMode cluster
+spark.speculation false
+spark.dynamicAllocation.enabled true
+spark.shuffle.service.enabled true
+# spark.local.dir  
+spark.scheduler.minRegisteredResourcesRatio 1.0
